# KetCat

./: .gitignore  CMakeLists.txt  README.md
config/: config.h
config/codegen/: gate_calibration_map.h
include/: atomic_units.h  constants.h  core_types.h  logo.h
include/_legacy/: particle_in_a_box.h  quantum_gate_helpers.h  quantum_gate_solver.h
include/atomic_physics_core/: atom.h  elements.h  quantum_number.h  rydberg_quantum_defect.h  rydberg_quantum_defects.h  slater_effective_n.h  spectroscopic_letters.h
include/compiler/: gate_compiler.h  physical_instruction.h
include/constexprmath/: constexpr_complex.h  constexpr_core_functions.h  constexpr_exp.h  constexpr_trigon.h
include/gate_calibration/: gate_diagnostics.h  phase_corrections.h
include/gate_diagnostics/: lagrange_poly.h
include/global_space/: global_state_manager.h  interaction_picture.h  output_probabilities.h  output_probability.h  rwa_frame.h  subspace_operations.h
include/hamiltonian/: dipole_operator.h  hamiltonian.h  harmonic_osc_potential.h  potential_barrier.h  qdit_hamiltonian.h  rabi_drive_hamiltonian.h  softculomb_potential.h  two_atom_rydberg.h
include/hilbert_space/: basis_set.h  dipole_operator.h  gram_schmidt_orthonorm.h  hilbert.h  hilbert2d.h  matrix.h  normalization.h  qdit_subspace_helper.h  reduced_energy_space.h  state_vector.h
include/kwf_exporter/: kwf_exporter.h  simulation_data.h  simulation_view_builder.h
include/laser/: laser_drive_protocol.h  laser_pulse.h  pulse_command.h  pulse_sequencer.h  single_qbit_control.h  single_qbit_protocol.h  stirap.h  two_photon_laser.h
include/local_space/: density_matrix.h  gram_schmidt_orthonorm.h  local_space.h  neutral_atom_manifold.h
include/matrix_utils/: matrix.h  tridiagonal_kronecker.h
include/operation_space/: neutral_atom_manifold.h
include/potential/: potential_eval.h
include/quantum_bit/: neutral_atom_config.h  neutral_atom_manifold.h
include/quantum_computer/: neutral_atom_computer.h  quantum_circuit.h  time_master.h
include/quantum_gates/: common_gates.h  gate_builder.h  gate_diag.h  gate_operation.h  gate_server.h  gates.h  iqft_gate.h
include/quantum_processor/: neutral_atom_computer.h  qpu_diag.h  quantum_circuit.h  quantum_processor.h  simulation_observer.h  time_master.h
include/solvers/: backend_traits.h  crank_nicolson_solver.h  crank_nicolson_solver_old.h  gauss_elimination.h  matrix_access.h  pentadiagonal_elimination.h  quantum_gate_helpers.h  quantum_gate_solver.h  thomas_algorithm.h  thomas_alogorithm.h
include/systems/: netural_atom_manifold.h  neutral_atom_computer.h  neutral_atom_config.h  neutral_atom_manifold.h  particle_in_a_box.h  qdit_register.h  quantum_circuit.h  reduced_energy  time_master.h
include/visu/: file_exporter.h  oscilloscope_config.h  visu_oscilloscope.h  visu_proba_table.h
include/wavefunction/: 2d_harmonic.h  2d_hydrogen.h  2d_hydrogenic.h  coherent_state_gaussian.h  effective_radial_orbital.h  eigenstate.h  gaussian_wave_packet.h  (+9 more)
src/: 2d_hydrogen_rabi.cpp  2dtest.cpp  coherent_state.cpp  eigen_state.cpp  fair_dice.cpp  gate_calibration.cpp  hydrogen.cpp  main.cpp  qdit_test.cpp  quantum_tunneling.cpp  smoke_test.cpp
visu_tool/: qubit_data.csv  visu.cmd  visu_tool_2d.py
(+31 files in other folders)
